--- a/index.css
+++ b/index.css
@@ -83,6 +83,14 @@ header span {
   box-shadow: 0px 0px 0px black;
 }
 
+.logo {
+  margin-left: 15%;
+}
+
+.raizlabs, .drugdev, .kitewheel {
+  margin-top: 25%;
+}
+
 .subsection {
   margin-bottom: 7%;
 }
