--- a/index.css
+++ b/index.css
@@ -18,6 +18,7 @@ body {
 .full-width-background {
   z-index: -1;
   width: 105%;
+  min-height: 431px;
   margin-top: -8px;
   margin-left: -8px;
   transition: background-color 1.0s ease;
