--- a/index.css
+++ b/index.css
@@ -27,6 +27,7 @@ body {
 
 a:link {
   color: black;
+  text-decoration: none;
 }
 
 a:visited {
@@ -34,7 +35,6 @@ a:visited {
 }
 
 a:hover {
-  color: #CC4B48;
   cursor: pointer;
 }
 
