--- a/index.css
+++ b/index.css
@@ -15,13 +15,15 @@ body {
 }
 
 @media (max-width: 1024px) {
-  #cryptography img, #machine-learning img {
+  .full-width-at-1024px {
     width: 100%;
   }
 }
 
 @media (max-width: 768px) {
-  /* TODO: padding around 3 column sections on index.html */
+  .ninety-percent-width-at-768px {
+    width: 90%;
+  }
 }
 
 @media (max-width: 560px) {
@@ -38,12 +40,16 @@ body {
     margin-bottom: 1em;
   }
 
-  .talks img, #cryptography img, #machine-learning img {
+  .padding-at-560px {
+    padding: 0 1em;
+  }
+
+  .ninety-percent-width-at-560px {
     width: 90%;
   }
 
-  .padding-when-mobile {
-    padding: 0 2em;
+  .seventy-percent-width-at-560px {
+    width: 70%;
   }
 }
 
@@ -79,10 +85,6 @@ a:hover {
 
 .headshot:hover {
   box-shadow: 0px 0px 1px black;
-}
-
-.drugdev {
-  margin-top: 0.8em;
 }
 
 .centered-text {
