--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,10 @@
 body {
-  font-family: 'Droid Sans', sans-serif;
+  font-family: Verdana, Geneva, sans-serif;
   width: 100%;
 }
 
 .quote {
-  font-family: 'Architects Daughter', cursive;
+  font-family: Papyrus, fantasy, cursive;
 }
 
 .home {
