Adjust header sizes and column allotments.

--- a/views/index.html
+++ b/views/index.html
@@ -22,7 +22,7 @@
       <section class="full-width-background">
         <div class="recommendations container">
           <div class="row">
-            <div class="six columns offset-by-three centered-text">
+            <div class="eight columns offset-by-two centered-text">
               <a href="/recommendations.html">
                 <h2>What People Are Saying</h2>
               </a>
@@ -54,7 +54,7 @@
       <section class="full-width-background">
         <div class="work container centered-text">
           <div class="row">
-            <div class="six columns offset-by-three">
+            <div class="eight columns offset-by-two">
               <a href="/work.html">
                 <h2>What I've Done</h2>
               </a>
@@ -108,7 +108,7 @@
       <section class="full-width-background">
         <div class="container talks centered-text">
           <div class="row">
-            <div class="four columns offset-by-four">
+            <div class="eight columns offset-by-two">
               <a href="/talks.html">
                 <h2 style="margin-bottom: 0px;">Public Speaking</h2>
               </a>
