--- a/views/talks.html
+++ b/views/talks.html
@@ -2,7 +2,7 @@
       <section class="full-width-background">
         <div class="container">
           <div class="row" id="cryptography">
-            <div class="four columns offset-by-four">
+            <div class="eight columns offset-by-two">
               <h2 class="centered-text" style="margin-bottom: 0px;">Public Speaking</h2>
               <h6 class="centered-text"><em>Video recordings coming soon!</em></h6>
             </div>
