Fix `mailto` address.

--- a/views/about.html
+++ b/views/about.html
@@ -42,7 +42,7 @@
 
               <p>
                 If you have an interesting project that you'd like to work on together
-                please feel free to get in touch <a href="mailto:murphybuffalo@gmail.com" target="_blank">
+                please feel free to get in touch <a href="mailto:murphydbuffalo@gmail.com" target="_blank">
                 via email</a>. Thanks!
               </p>
             </div>
