Give headlines all 12 columns so the text doesn't wrap on smaller screens.

--- a/views/about.html
+++ b/views/about.html
@@ -2,7 +2,7 @@
       <section class="full-width-background">
         <div class="container">
           <div class="row">
-            <div class="four columns offset-by-four centered-text">
+            <div class="twelve columns centered-text">
               <a href="https://www.linkedin.com/in/danmurphydev" target="_blank">
                 <h1>Hi, I'm Dan</h1>
               </a>
