--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
       <section class="full-width-background">
         <div class="container about">
           <div class="row">
-            <div class="four columns offset-by-four centered-text">
+            <div class="twelve columns centered-text">
               <a href="/about.html">
                 <h2>Hi, I'm Dan</h2>
               </a>
@@ -10,7 +10,7 @@
           </div>
 
           <div class="row">
-            <div class="four columns offset-by-four centered-text">
+            <div class="twelve columns centered-text">
               <a href="/about.html">
                 <img alt="Dan's profile picture." class="headshot" src="images/profile-pic.jpg"/>
               </a>
@@ -22,7 +22,7 @@
       <section class="full-width-background">
         <div class="recommendations container">
           <div class="row">
-            <div class="eight columns offset-by-two centered-text">
+            <div class="twelve columns centered-text">
               <a href="/recommendations.html">
                 <h2>What People Are Saying</h2>
               </a>
@@ -54,7 +54,7 @@
       <section class="full-width-background">
         <div class="work container centered-text">
           <div class="row">
-            <div class="eight columns offset-by-two">
+            <div class="twelve columns">
               <a href="/work.html">
                 <h2>What I've Done</h2>
               </a>
@@ -108,7 +108,7 @@
       <section class="full-width-background">
         <div class="container talks centered-text">
           <div class="row">
-            <div class="eight columns offset-by-two">
+            <div class="twelve columns">
               <a href="/talks.html">
                 <h2 style="margin-bottom: 0px;">Public Speaking</h2>
               </a>
@@ -144,7 +144,7 @@
       <section class="full-width-background">
         <div class="container blog centered-text">
           <div class="row">
-            <div class="six columns offset-by-three">
+            <div class="twelve columns">
               <a href="https://murphydbuffalo.tumblr.com" target="_blank">
                 <h2>The <em>On and On</em> Blog</h2>
               </a>
