--- a/views/recommendations.html
+++ b/views/recommendations.html
@@ -2,7 +2,7 @@
       <section class="full-width-background">
         <div class="container">
           <div class="row">
-            <div class="eight columns offset-by-two centered-text">
+            <div class="twelve columns centered-text">
               <h1>What People Are Saying</h1>
             </div>
           </div>
@@ -18,7 +18,7 @@
           </div>
 
           <div class="row">
-            <div class="eight columns offset-by-two">
+            <div class="twelve columns">
               <h2 class="centered-text">Josh Wilson</h2>
               <h4 class="centered-text">VP of Product Management at Raizlabs</h4>
               <p class="quote">
@@ -44,7 +44,7 @@
           </div>
 
           <div class="row">
-            <div class="eight columns offset-by-two">
+            <div class="twelve columns">
               <h2 class="centered-text">Jeremiah Atwood</h2>
               <h4 class="centered-text">Web Platform Lead at Raizlabs</h4>
               <p class="quote">
@@ -73,7 +73,7 @@
           </div>
 
           <div class="row">
-            <div class="eight columns offset-by-two">
+            <div class="twelve columns">
               <h2 class="centered-text">Matt Buckley</h2>
               <h4 class="centered-text">Mobile Engineer at Raizlabs</h4>
               <p class="quote">
