--- a/views/work.html
+++ b/views/work.html
@@ -2,7 +2,7 @@
       <section class="full-width-background">
         <div class="container">
           <div class="row">
-            <div class="six columns offset-by-three centered-text">
+            <div class="twelve columns centered-text">
               <h1>What I've Done</h1>
             </div>
           </div>
@@ -18,7 +18,7 @@
           </div>
 
           <div class="row padding-at-560px">
-            <div class="eight columns offset-by-two">
+            <div class="twelve columns">
               <h4 class="centered-text">API development at Raizlabs</h4>
               <p>
                 While at Raizlabs I lead development of a JSON API using Node.js, Express,
@@ -50,7 +50,7 @@
           </div>
 
           <div class="row padding-at-560px">
-            <div class="eight columns offset-by-two">
+            <div class="twelve columns">
               <h4 class="centered-text">Enterprise applications at DrugDev</h4>
               <p>
                 At DrugDev I was one of the principal developers of an enterprise solution
@@ -89,7 +89,7 @@
           </div>
 
           <div class="row padding-at-560px">
-            <div class="eight columns offset-by-two">
+            <div class="twelve columns">
               <h4 class="centered-text">Success in a small team at Kitewheel</h4>
               <p>
                 At Kitewheel I was a member of a 3, and later 4, person development
