Shrink recommendation images on index page for tablets.
To prevent the images from overlapping.

--- a/views/index.html
+++ b/views/index.html
@@ -32,19 +32,19 @@
           <div class="row centered-text">
             <div class="four columns">
               <a href="/recommendations.html#josh">
-                <img alt="Josh Wilson's LinkedIn picture" class="headshot" src="images/josh_wilson.jpg"/>
+                <img alt="Josh Wilson's LinkedIn picture" class="headshot ninety-percent-width-at-768px" src="images/josh_wilson.jpg"/>
               </a>
             </div>
 
             <div class="four columns">
               <a href="/recommendations.html#jeremiah">
-                <img alt="Jeremiah Atwood's LinkedIn picture." class="headshot" src="images/jeremiah_atwood.jpg"/>
+                <img alt="Jeremiah Atwood's LinkedIn picture." class="headshot ninety-percent-width-at-768px" src="images/jeremiah_atwood.jpg"/>
               </a>
             </div>
 
             <div class="four columns">
               <a href="/recommendations.html#matt">
-                <img alt="Matt Buckley's LinkedIn picture." class="headshot" src="images/matt_buckley.jpg"/>
+                <img alt="Matt Buckley's LinkedIn picture." class="headshot ninety-percent-width-at-768px" src="images/matt_buckley.jpg"/>
               </a>
             </div>
           </div>
