--- a/css/index.css
+++ b/css/index.css
@@ -51,6 +51,10 @@ body {
   .seventy-percent-width-at-560px {
     width: 70%;
   }
+
+  .sixty-percent-width-at-560px {
+    width: 60%;
+  }
 }
 
 .full-width-background {
