Fix width (# of columns) of text on work and recommendations pages.

--- a/views/work.html
+++ b/views/work.html
@@ -20,6 +20,11 @@
           <div class="row padding-at-560px">
             <div class="twelve columns">
               <h4 class="centered-text">API development at Raizlabs</h4>
+            </div>
+          </div>
+
+          <div class="row padding-at-560px">
+            <div class="eight columns offset-by-two">
               <p>
                 While at Raizlabs I lead development of a JSON API using Node.js, Express,
                 Redis, and MySQL to support Android, iOS, and web clients for a leading
@@ -52,6 +57,11 @@
           <div class="row padding-at-560px">
             <div class="twelve columns">
               <h4 class="centered-text">Enterprise applications at DrugDev</h4>
+            </div>
+          </div>
+
+          <div class="row padding-at-560px">
+            <div class="eight columns offset-by-two">
               <p>
                 At DrugDev I was one of the principal developers of an enterprise solution
                 for distributing urgent safety-related notifications to participants
@@ -91,6 +101,11 @@
           <div class="row padding-at-560px">
             <div class="twelve columns">
               <h4 class="centered-text">Success in a small team at Kitewheel</h4>
+            </div>
+          </div>
+
+          <div class="row padding-at-560px">
+            <div class="eight columns offset-by-two">
               <p>
                 At Kitewheel I was a member of a 3, and later 4, person development
                 team charged with building out the company's visual programming product.
