--- a/views/recommendations.html
+++ b/views/recommendations.html
@@ -21,6 +21,11 @@
             <div class="twelve columns">
               <h2 class="centered-text">Josh Wilson</h2>
               <h4 class="centered-text">VP of Product Management at Raizlabs</h4>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="eight columns offset-by-two">
               <p class="quote">
                 &#10077;Dan is an extremely effective developer because his communication skills
                 are as strong as his technical ability and he understands the value
@@ -47,6 +52,11 @@
             <div class="twelve columns">
               <h2 class="centered-text">Jeremiah Atwood</h2>
               <h4 class="centered-text">Web Platform Lead at Raizlabs</h4>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="eight columns offset-by-two">
               <p class="quote">
                 &#10077;Dan is an avid technologist who is always teaching himself new concepts
                 and technologies. On a recent Android and API project, he jumped in and
@@ -76,6 +86,11 @@
             <div class="twelve columns">
               <h2 class="centered-text">Matt Buckley</h2>
               <h4 class="centered-text">Mobile Engineer at Raizlabs</h4>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="eight columns offset-by-two">
               <p class="quote">
                 &#10077;Dan consistently delivers high-quality code, asking probing questions
                 to clarify requirements and ensuring that features are completed to
