Better copy in the "work" and "about me" sections.

--- a/views/about.html
+++ b/views/about.html
@@ -36,8 +36,10 @@
 
               <p>
                 Away from the keyboard you'll find me doing yoga, playing basketball,
-                strumming guitars, fiddling with pianos, reading, and writing (check out
-                my blog below).
+                strumming guitars, fiddling with pianos, reading, and writing
+                 (check out my blog, <a
+                 href="https://murphydbuffalo.tumblr.com" target="_blank">On
+                 and On</a>).
               </p>
 
               <p>
