--- a/views/work.html
+++ b/views/work.html
@@ -65,22 +65,24 @@
               <p>
                 At DrugDev I was one of the principal developers of an enterprise solution
                 for distributing urgent safety-related notifications to participants
-                in clinical trials, including a process to migrate data from the existing
-                solution of one of the world's 5 largest pharmaceutical companies to
-                the new DrugDev application.
+                in clinical trials. This included an ETL process from one of the world's 5
+                largest pharmaceutical companies to the new DrugDev application.
               </p>
 
               <ul>
                 <li>
-                  Enforced a large and complex set of business rules.
+                  Factored code out of bloated ActiveRecord models and into
+                  a comprehensible set of small, single purpose Ruby classes.
                 </li>
 
                 <li>
-                  Worked within DrugDev's existing 8+ year old Ruby on Rails codebase.
+                  Wrote a script to process hundreds of thousands of rows of
+                  CSV data quickly while enforcing a large and complex set of
+                  business rules.
                 </li>
 
                 <li>
-                  Processed hundreds of thousands of rows of CSV data quickly.
+                  Worked effectively within DrugDev's existing 8+ year old Ruby on Rails codebase.
                 </li>
               </ul>
             </div>
