Added Vimeo iframe for cryptography talk.

--- a/views/index.html
+++ b/views/index.html
@@ -110,10 +110,8 @@
           <div class="row">
             <div class="twelve columns">
               <a href="/talks.html">
-                <h2 style="margin-bottom: 0px;">Public Speaking</h2>
+                <h2>Public Speaking</h2>
               </a>
-
-              <h6><em>Video recordings coming soon!</em></h6>
             </div>
           </div>
 
