--- a/views/talks.html
+++ b/views/talks.html
@@ -4,7 +4,6 @@
           <div class="row" id="cryptography">
             <div class="twelve columns">
               <h2 class="centered-text" style="margin-bottom: 0px;">Public Speaking</h2>
-              <h6 class="centered-text"><em>Video recordings coming soon!</em></h6>
             </div>
           </div>
 
@@ -13,11 +12,19 @@
           <div class="row">
             <div class="eight columns offset-by-two">
               <div class="centered-text">
-                <img
-                  alt="The first slide from Dan's talk on public key cryptography."
-                  class="full-width-at-1024px ninety-percent-width-at-560px"
-                  src="images/cryptography_slide.png"
-                />
+                <iframe
+                   src="https://player.vimeo.com/video/217214978"
+                   width="640"
+                   height="360"
+                   frameborder="0"
+                   webkitallowfullscreen
+                   mozallowfullscreen
+                   allowfullscreen>
+                </iframe>
+
+                <p>
+                  <a href="https://vimeo.com/217214978">Cryptography in Colors: Public Key Cryptography</a> from <a href="https://vimeo.com/raizlabs">Raizlabs</a> on <a href="https://vimeo.com">Vimeo</a>.
+                </p>
               </div>
 
               <hr/>
@@ -37,6 +44,7 @@
         <div class="container">
           <div class="row" id="machine-learning">
             <div class="eight columns offset-by-two">
+              <h6 class="centered-text"><em>Video recording coming soon!</em></h6>
               <div class="centered-text">
                 <img
                   class="full-width-at-1024px ninety-percent-width-at-560px"
