--- a/views/talks.html
+++ b/views/talks.html
@@ -13,6 +13,7 @@
             <div class="eight columns offset-by-two">
               <div class="centered-text">
                 <iframe
+                   class="video"
                    src="https://player.vimeo.com/video/217214978"
                    width="640"
                    height="360"
@@ -44,7 +45,6 @@
         <div class="container">
           <div class="row" id="machine-learning">
             <div class="eight columns offset-by-two">
-              <h6 class="centered-text"><em>Video recording coming soon!</em></h6>
               <div class="centered-text">
                 <img
                   class="full-width-at-1024px ninety-percent-width-at-560px"
@@ -52,6 +52,8 @@
                   src="images/machine_learning_slide.png"
                 />
               </div>
+
+              <h6 class="centered-text"><em>Video recording coming soon!</em></h6>
 
               <hr/>
 
