Better description for the cryptography talk.

--- a/views/talks.html
+++ b/views/talks.html
@@ -32,7 +32,7 @@
 
               <p>
                 A math-light explanation of one of the core technologies of the internet:
-                public key cryptography. We'll use metaphors from Brit Cruise's amazing
+                public key cryptography. We'll use visuals and metaphors from Brit Cruise's 
                 <a href="https://www.youtube.com/user/ArtOfTheProblem" target="_blank">
                    Art of the Problem</a> video series on YouTube to explore this topic in-depth.
               </p>
