Pull leading quotation marks left, so first line doesn't appear misaligned.

--- a/views/recommendations.html
+++ b/views/recommendations.html
@@ -27,7 +27,7 @@
           <div class="row">
             <div class="eight columns offset-by-two">
               <p class="quote">
-                &#10077;Dan is an extremely effective developer because his communication skills
+                <span>&#10077;</span>Dan is an extremely effective developer because his communication skills
                 are as strong as his technical ability and he understands the value
                 of flexibility and empathy when working in a team. He also has an infectious
                 enthusiasm for the craft of software and picks up new languages, patterns,
@@ -58,7 +58,7 @@
           <div class="row">
             <div class="eight columns offset-by-two">
               <p class="quote">
-                &#10077;Dan is an avid technologist who is always teaching himself new concepts
+                <span>&#10077;</span>Dan is an avid technologist who is always teaching himself new concepts
                 and technologies. On a recent Android and API project, he jumped in and
                 took over the API work, working directly with client developers to deliver
                 an ambitious product. Dan was also instrumental in kicking off an initiative
@@ -92,7 +92,7 @@
           <div class="row">
             <div class="eight columns offset-by-two">
               <p class="quote">
-                &#10077;Dan consistently delivers high-quality code, asking probing questions
+                <span>&#10077;</span>Dan consistently delivers high-quality code, asking probing questions
                 to clarify requirements and ensuring that features are completed to
                 spec and ahead of schedule. He boasts a wide-ranging skill set. Given
                 a set of requirements, Dan draws on expertise in Ruby, JavaScript, and
