--- a/css/index.css
+++ b/css/index.css
@@ -15,7 +15,7 @@ main {
 #modal {
   position: relative;
   margin: auto;
-  top: 75px;
+  top: 5em;
   background: white;
   min-height: 500px;
   width: 85%;
@@ -28,7 +28,7 @@ main {
 }
 
 #headshot {
-  margin: 50px 0 0 50px;
+  margin: 3.5em 0 0 3.5em;
 }
 
 #headshot img {
@@ -42,12 +42,13 @@ main {
 
 #about-me ul {
   list-style: none;
+  margin-left: 2.5em;
 }
 
 #about-me li {
   display: inline-block;
   color: black;
-  margin-left: 1rem;
+  margin-left: 1.25rem;
 }
 
 a, a:hover {
