--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,9 @@
 body {
   width: 100%;
-  --dark-blue: #0a4773;
 }
 
 header {
-  background-color: var(--dark-blue);
+  background-color: #0a4773;;
   min-height: 500px;
 }
 
