--- a/css/index.css
+++ b/css/index.css
@@ -57,3 +57,12 @@ a, a:hover {
 i {
   font-size: 2em;
 }
+
+section:first-child {
+  margin-top: 8em;
+}
+
+section {
+  text-align: center;
+  margin-bottom: 5em;
+}
