--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,7 @@ header {
 
 main {
   background-color: #F6F6F6;
+  padding-top: 8em;
 }
 
 #modal {
@@ -58,11 +59,7 @@ i {
   font-size: 2em;
 }
 
-section:first-child {
-  margin-top: 8em;
-}
-
 section {
   text-align: center;
-  margin-bottom: 5em;
+  padding-bottom: 5em;
 }
