--- a/css/index.css
+++ b/css/index.css
@@ -71,3 +71,11 @@ section {
 #recommendations h3 {
   margin-bottom: 0.1em;
 }
+
+.card {
+  background: white;
+  padding: 2em;
+  margin: 2em 0;
+  border-radius: 5px;
+  box-shadow: 1px 1px 4px lightgray;
+}
