--- a/css/index.css
+++ b/css/index.css
@@ -17,7 +17,7 @@ section {
   padding-bottom: 5em;
 }
 
-h3 {
+#recommendations h3 {
   margin-bottom: 0.1em;
 }
 
@@ -104,6 +104,11 @@ i {
     width: 428.8px;
     height: 241.2px;
   }
+
+  #smile-o-meter img {
+    width: 300px;
+    height: 203.5px;
+  }
 }
 
 @media (max-width: 950px) {
@@ -143,11 +148,6 @@ i {
 
   .card p, .card blockquote {
     padding: 0 5%;
-  }
-
-  #smile-o-meter img {
-    height: 250px;
-    width: 250px;
   }
 }
 
