--- a/css/index.css
+++ b/css/index.css
@@ -17,10 +17,6 @@ section {
   padding-bottom: 5em;
 }
 
-#recommendations h3 {
-  margin-bottom: 0.1em;
-}
-
 a, a:hover {
   color: black;
   text-decoration: none;
@@ -28,6 +24,10 @@ a, a:hover {
 
 i {
   font-size: 2em;
+}
+
+iframe {
+  border: none;
 }
 
 #modal {
@@ -75,6 +75,10 @@ i {
   display: inline-block;
   color: black;
   margin-left: 1.25rem;
+}
+
+#recommendations h3 {
+  margin-bottom: 0.1em;
 }
 
 .card {
