--- a/css/index.css
+++ b/css/index.css
@@ -86,7 +86,15 @@ iframe {
   padding: 2em;
   margin: 2em 0;
   border-radius: 5px;
-  box-shadow: 1px 1px 4px lightgray;
+  box-shadow: 1px 1px 2px lightgray;
+}
+
+.card:hover {
+  box-shadow: 2px 2px 2px lightgray;
+}
+
+.card-link {
+  display: 'block';
 }
 
 .card p, .card blockquote {
