--- a/css/index.css
+++ b/css/index.css
@@ -85,16 +85,6 @@ iframe {
   height: 300px;
 }
 
-#recommendation-toggle {
-  list-style: none;
-  font-size: 0.5em;
-}
-
-#recommendation-toggle li {
-  display: inline-block;
-  margin: 0 0.2em;
-}
-
 #talks .card iframe {
   margin-bottom: 2em;
 }
@@ -137,6 +127,16 @@ iframe {
 
 .card i {
   font-size: 1em;
+}
+
+.carousel {
+  list-style: none;
+  font-size: 0.5em;
+}
+
+.carousel li {
+  display: inline-block;
+  margin: 0 0.2em;
 }
 
 @media (max-width: 1500px) {
